# gittop

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/git/: mod.rs  repository.rs  status.rs
src/ui/: app.rs  events.rs  layout.rs  mod.rs
src/watcher/: filesystem.rs  mod.rs
