[package]
name = "gittop"
version = "0.1.0"
edition = "2021"
authors = ["Engineers Hub Ltd"]
description = "A real-time Git repository monitoring tool like top/htop"
license = "MIT"
readme = "README.md"
repository = "https://github.com/engineers-hub-ltd/gittop"
keywords = ["git", "cli", "tui", "monitoring", "development-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
git2 = "0.18"
ratatui = "0.28"
crossterm = "0.28"
notify = "6.1"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
once_cell = "1.20"

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
